Update banner image

--- a/html/index.html
+++ b/html/index.html
@@ -7,12 +7,14 @@
   <title>NL2 LWO to CSV converter</title>
   <meta name="description" content="Converts NoLimits2 STANDARD LWO files to CSV point coordinates">
   <meta name="author" content="TeamBergerhealer">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="theme-color" content="#378937" />
 
   <meta property="og:title" content="NL2 LWO to CSV converter">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://nl2.traincarts.net">
   <meta property="og:description" content="Converts NoLimits2 STANDARD LWO files to CSV point coordinates">
-  <meta property="og:image" content="banner.png">
+  <meta property="og:image" content="/banner.png">
 
   <link rel="icon" href="favicon.ico">
 
