--- a/html/index.html
+++ b/html/index.html
@@ -92,6 +92,14 @@
         <textarea id="output-text" name="output-text" readonly>No LWO file loaded</textarea>
       </div>
     </div>
+    <div class="footer">
+      <div class="footer-content">
+        <span><i>Conversion is done in your browser</i></span>
+        <span> - </span>
+        <a target="_blank" href="https://github.com/bergerhealer/nolimits2csv">Source on GitHub</a>
+        <span class="footer-author"><b>TeamBergerhealer 2023</b></span>
+      </div>
+    </div>
   </div>
 
   <div id="paste-server-bg">
